Add DeleteAccountCommand
