# command-api/src/main/resources/openapi/command-api-v1.yml
@@ -7,7 +7,7 @@ tags:
   - name: command
     description: Command API
 paths:
-  /command-api/v1/commands/accounts:
+  /command-api/v1/accounts:
     post:
       tags:
         - command
@@ -26,8 +26,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
+    delete:
+      tags:
+        - command
+      summary: Delete an existing account
+      operationId: deleteAccount
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/DeleteAccountRequest'
+      responses:
+        '200':
+          description: Account deleted successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CommandResponse'
 
-  /command-api/v1/commands/deposit:
+  /command-api/v1/deposit:
     post:
       tags:
         - command
@@ -47,7 +65,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
 
-  /command-api/v1/commands/withdraw:
+  /command-api/v1/withdraw:
     post:
       tags:
         - command
@@ -67,7 +85,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
 
-  /command-api/v1/commands/transfer:
+  /command-api/v1/transfer:
     post:
       tags:
         - command
@@ -86,6 +104,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CommandResponse'
+
 components:
   schemas:
     CreateAccountRequest:
@@ -102,7 +121,7 @@ components:
       properties:
         accountId:
           type: string
-          example: "acc123"
+          example: "e1be0f53-007a-4d58-805b-2c5a64fd3ff4"
         amount:
           $ref: '#/components/schemas/DecimalAmount'
       required:
@@ -114,7 +133,7 @@ components:
       properties:
         accountId:
           type: string
-          example: "acc123"
+          example: "e1be0f53-007a-4d58-805b-2c5a64fd3ff4"
         amount:
           $ref: '#/components/schemas/DecimalAmount'
       required:
@@ -126,16 +145,25 @@ components:
       properties:
         fromAccountId:
           type: string
-          example: "acc123"
+          example: "e1be0f53-007a-4d58-805b-2c5a64fd3ff4"
         toAccountId:
           type: string
-          example: "acc456"
+          example: "e1be0f53-007a-4d58-805b-2c5a64fd3ff4"
         amount:
           $ref: '#/components/schemas/DecimalAmount'
       required:
         - fromAccountId
         - toAccountId
         - amount
+
+    DeleteAccountRequest:
+      type: object
+      properties:
+        accountId:
+          type: string
+          example: "e1be0f53-007a-4d58-805b-2c5a64fd3ff4"
+      required:
+        - accountId
 
     CommandResponse:
       type: object
