# command-service/src/main/kotlin/com/mayosen/financeapp/command/CommandController.kt
@@ -2,12 +2,14 @@ package com.mayosen.financeapp.command
 
 import com.mayosen.financeapp.command.api.CommandGateway
 import com.mayosen.financeapp.command.api.CreateAccountCommand
+import com.mayosen.financeapp.command.api.DeleteAccountCommand
 import com.mayosen.financeapp.command.api.DepositCommand
 import com.mayosen.financeapp.command.api.TransferCommand
 import com.mayosen.financeapp.command.api.WithdrawCommand
 import com.mayosen.financeapp.command.api.v1.CommandApi
 import com.mayosen.financeapp.command.api.v1.CommandResponse
 import com.mayosen.financeapp.command.api.v1.CreateAccountRequest
+import com.mayosen.financeapp.command.api.v1.DeleteAccountRequest
 import com.mayosen.financeapp.command.api.v1.DepositRequest
 import com.mayosen.financeapp.command.api.v1.TransferRequest
 import com.mayosen.financeapp.command.api.v1.WithdrawRequest
@@ -24,7 +26,7 @@ class CommandController(
     private val commandGateway: CommandGateway,
 ) : CommandApi {
     override fun createAccount(createAccountRequest: CreateAccountRequest): ResponseEntity<CommandResponse> {
-        logger.info("Creating account $createAccountRequest")
+        logger.info { "Received CreateAccountRequest: $createAccountRequest" }
         val command =
             CreateAccountCommand(
                 id = generateCommandId(),
@@ -34,7 +36,7 @@ class CommandController(
     }
 
     override fun deposit(depositRequest: DepositRequest): ResponseEntity<CommandResponse> {
-        logger.info { "Received DepositCommand: $depositRequest" }
+        logger.info { "Received DepositRequest: $depositRequest" }
         val command =
             DepositCommand(
                 id = generateCommandId(),
@@ -45,7 +47,7 @@ class CommandController(
     }
 
     override fun withdraw(withdrawRequest: WithdrawRequest): ResponseEntity<CommandResponse> {
-        logger.info { "Received WithdrawCommand: $withdrawRequest" }
+        logger.info { "Received WithdrawRequest: $withdrawRequest" }
         val command =
             WithdrawCommand(
                 id = generateCommandId(),
@@ -56,13 +58,23 @@ class CommandController(
     }
 
     override fun transfer(transferRequest: TransferRequest): ResponseEntity<CommandResponse> {
-        logger.info { "Received TransferCommand: $transferRequest" }
+        logger.info { "Received TransferRequest: $transferRequest" }
         val command =
             TransferCommand(
                 id = generateCommandId(),
                 fromAccountId = transferRequest.fromAccountId,
                 toAccountId = transferRequest.toAccountId,
                 amount = transferRequest.amount,
+            )
+        return sendCommandReturningId(command)
+    }
+
+    override fun deleteAccount(deleteAccountRequest: DeleteAccountRequest): ResponseEntity<CommandResponse> {
+        logger.info { "Received DeleteAccountRequest: $deleteAccountRequest" }
+        val command =
+            DeleteAccountCommand(
+                id = generateCommandId(),
+                accountId = deleteAccountRequest.accountId,
             )
         return sendCommandReturningId(command)
     }
